...
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:autofillHints="@string/user"
...
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passText"
        android:hint="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/pass"
        android:ems="10"
        android:inputType="textPassword" />
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="registration"
        android:text="@string/Reg_Button_Label" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/Login_Button_Label" />


...
